fixed bugs, last article blocks scrolls off screen, couple other things. ready for editorial copy

--- a/src/components/ArticleEntry/ArticleEntry.css
+++ b/src/components/ArticleEntry/ArticleEntry.css
@@ -8,5 +8,5 @@
 
 .App .step:last-child {
 	height: 50vh;
-    margin-bottom: 50vh;
+    margin-bottom: 100vh;
 }
